# arquitectura-walmart

./: README.md
back/: data.json  db.sqlite3  pyproject.toml  script.sql
back/core/: admin.py  data.json  models.py  serializer.py  serializers.py  urls.py  views.py
back/core/migrations/: 0001_initial.py  0002_alter_user_groups.py  0002_reporte.py  0003_remove_user_groups_user_groups.py
back/env/: pyvenv.cfg
back/project/: settings.py  urls.py
front/: .gitignore  angular.json  package-lock.json  package.json
front/src/: index.html
front/src/app/: app-routing.module.ts  app.module.ts  auth.guard.ts  has-role.guard.ts  shared.module.ts
front/src/app/components/navbar/: navbar.component.html  navbar.component.ts
front/src/app/components/view-detail-products/: view-detail-products.component.html  view-detail-products.component.spec.ts  view-detail-products.component.ts
front/src/app/components/view-products/: view-products.component.html  view-products.component.ts
front/src/app/interfaces/: Compra.ts  GrupoProducto.ts  Producto.ts  Reporte.ts  Reportes.ts  Sucursal.ts  User.ts
front/src/app/pages/crud-products/: crud-products.component.html  crud-products.component.ts
front/src/app/pages/grupo-producto/: grupo-producto.component.html  grupo-producto.component.ts
front/src/app/pages/home/: home.component.html  home.component.ts
front/src/app/pages/login/: login.component.html  login.component.ts
front/src/app/pages/products-detail/: products-detail.component.html  (+2 more)
front/src/app/services/: auth.service.ts  backend.service.ts
(+15 files in other folders)
